fix mineur alignements titres son et artiste

--- a/style.css
+++ b/style.css
@@ -127,9 +127,8 @@
 
     #track-title {
       font-size: 18px;
-      margin: 1rem;
-      font-weight: bold;
-      margin: 0;                    
+      margin: 0.2rem;
+      font-weight: bold;                    
       overflow-wrap: break-word;    /* casse le mot si trop long */
       word-break: break-word;       /* compatibilité */
       flex: 1 1 auto;               /* autorise à se réduire et s’étendre */
@@ -139,7 +138,7 @@
     #artist-name {
       font-size: 14px;
       opacity: 0.8;
-      margin: 1rem;
+      margin: 0.2rem;
     }
 
 
